apps/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: open-webui
  annotations:
    external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
      sectionName: wildcard-https
  hostnames:
    - open-webui.thisratis.gay
  rules:
    - backendRefs:
        - name: open-webui
          port: 80
